# worldofpadman-fork

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  wop-changelog.md
.github/: FUNDING.yml
.github/workflows/: build.yml
code/: CMakeLists.txt
code/autoupdater/: CMakeLists.txt
code/botlib/: be_ai_chat.c  be_ai_chat.h  be_ai_goal.c  be_interface.c  botlib.h
code/cgame/: cg_draw.c  cg_event.c  cg_info.c  cg_lensflare.c  cg_local.h  cg_main.c  cg_players.c  cg_playerstate.c  cg_view.c  cg_weapons.c
code/client/: CMakeLists.txt  cl_cin.c  cl_main.c  client.h
code/game/: ai_dmq3.c  bg_misc.c  bg_public.h  g_active.c  g_combat.c  g_ctlitems.c  g_local.h  g_main.c  g_syscalls.c
code/q3_ui/: ui_atoms.c  ui_callvote.c  ui_demo2.c  ui_help.c  ui_players.c  ui_playersettings.c  ui_qmenu.c  ui_servers2.c  ui_video.c  ui_voicechat.c
code/qcommon/: common.c  q_platform.h  q_shared.h  qcommon.h
code/renderer_vulkan/: CMakeLists.txt
code/renderergl1/: CMakeLists.txt
code/renderergl2/: CMakeLists.txt
code/server/: CMakeLists.txt  sv_game.c
code/sys/: sys_local.h
code/tests/: CMakeLists.txt
code/ui/: ui_atoms.c  ui_local.h  ui_main.c  ui_menu.c  ui_players.c  ui_qmenu.c  ui_serverinfo.c  ui_setup.c  ui_sound.c
docs/: vulkan-readme.md
libs/curl-7.54.0/: CMakeLists.txt
misc/wop-xtras/: readme.html
misc/wop-xtras/readme/: readme.css
wop/: default.cfg  server-settings.cfg
wop/scripts.pk3dir/botfiles/bots/: paddy_t.c  padgirl_t.c
wop/scripts.pk3dir/scripts/: common.shader  pad_airplane.shader  pad_asia.shader  pad_attic.shader  pad_bookroom.shader  pad_cloister.shader  pad_cyb.shader  pad_effects.shader  pad_fridge.shader  pad_gamemodels.shader  pad_garden.shader  pad_gfx.shader  pad_glowmaps.shader  pad_jail.shader  pad_journey.shader  pad_kitchen.shader  pad_mapobjects.shader  pad_pirate.shader  pad_shop.shader  pad_tex02.shader  pad_trash.shader  q3map2_wop_diner.shader  q3map2_wop_dinerBB.shader  q3map2_wop_trashmap.shader  wop_code.shader  wop_glowmodels.shader  wop_icons.shader  wop_levelshots.shader  wop_maps.arena  wop_menu.shader  wop_playermodels.shader  wop_powerups.shader  wop_weapons.shader  wop_weaponsfx.shader
xmas/scripts.pk3dir/scripts/: freeztag.shader  healthstation.shader  pad_armour.shader  pad_balloonbox.shader  pad_garden.shader  pad_teleporter.shader  padmodel.shader  spraypistol.shader
